--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="./style1/global.css"/>
+    <link rel="stylesheet" href="./style1/header.css"/>
+    <link rel="stylesheet" href="./style1/footer.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@600&display=swap" rel="stylesheet">
@@ -47,21 +50,21 @@
             <p class="text">Worked with 100+Companies</p>
                 <div class="icon">
                     <div class="icon1">
-                        <img src="./images/Vector.svg" alt="#"/>
+                        <img src="./images/Vector.svg" alt="Vector"/>
                         <p>Logoipsum</p>
                     </div>
                     <div class="icon2">
-                        <img src="./images/Vector (1).svg" alt="#"/>
+                        <img src="./images/Vector (1).svg" alt="vector(1)"/>
                         <p>Logoipsum</p>
                     </div>
                     <div class="icon3">
-                        <img src="./images/Vector (2).svg" alt="#"/>
+                        <img src="./images/Vector (2).svg" alt="Vector(2)"/>
                         <p>Logoipsum</p> 
                     </div>
                 </div>
             </div>
             <div class="card2">
-                <img src="./images/header-image.png" alt="#"/>
+                <img src="./images/header-image.png" alt="header-image"/>
             </div>
         </div>
     </section>
@@ -71,19 +74,19 @@
             <p class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et, mattis purus. Vivamus commodo suscipit tellus et pellentesque.</p>
             <div class="help">
                 <div class="card3">
-                    <img src="./images/post1.png" alt="#"/>
+                    <img src="./images/post1.png" alt="post1"/>
                     <h2>Business strategy</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et,</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div class="card4">
-                    <img src="./images/post-2.png" alt="#"/>
+                    <img src="./images/post-2.png" alt="post-2"/>
                     <h2>Digitalization</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et,</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div class="card5">
-                    <img src="./images/post-3.png" alt="#"/>
+                    <img src="./images/post-3.png" alt="post-3"/>
                     <h2>Risk assessment</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et,</p>
                     <a href="#">Learn more</a>
@@ -103,17 +106,17 @@
             </div>
             <div class="bottom">
                 <div class="card6">
-                    <img src="./images/Icon-layer.png" alt="#"/>
+                    <img src="./images/Icon-layer.png" alt="icon-Layer"/>
                     <h3>Invoicing</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et,</p>
                 </div>
                 <div class="card7">
-                    <img src="./images/Icon-wizard.png" alt="#"/>
+                    <img src="./images/Icon-wizard.png" alt="icon-wizard"/>
                     <h3>Support</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et,</p>
                 </div>
                 <div class="card8">
-                    <img src="./images/Icon-heart.png" alt="#"/>
+                    <img src="./images/Icon-heart.png" alt="icon-heart"/>
                     <h3>Surveying</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et,</p>
                 </div>
@@ -142,7 +145,7 @@
                     </div>
                 </div>
                     <div class="picAbout">
-                        <img src="./images/about-image.png" alt="#"/>
+                        <img src="./images/about-image.png" alt="about-image"/>
                      </div>    
             </div>
         </div>
@@ -162,7 +165,7 @@
                     <a href="#">See all services</a>
                 </div>
                 <div class="rightSlide">
-                    <img src="./images/team.png" alt="#"/>
+                    <img src="./images/team.png" alt="team"/>
                 </div>
             </div>
          </div>   
@@ -170,7 +173,7 @@
     <section>
         <div class="container6">
             <div class="leftSlide2">
-                <img src="./images/woman.svg" alt=""/>
+                <img src="./images/woman.svg" alt="woman"/>
             </div>
             <div class="rightSlide1">
                 <h3>Energy of a start-up combined with 30 years of experience.</h3>
@@ -186,7 +189,7 @@
                     <p>Maecenas efficitur scelerisque lorem, et varius lacus tincidunt vel. Pellentesque a arcu vitae diam dapibus mattis vel vel orci. Vivamus eleifend nec felis vel auctor.</p>
                 </div>
                 <div class="card11">
-                    <img src="./images/circle woman pic.svg" alt="#"/>
+                    <img src="./images/circle woman pic.svg" alt="circle woman pic"/>
                     <div>
                         <ul>
                             <li>Chikelu Neo</li>
@@ -197,7 +200,7 @@
             </div>
             <div class="rightSlide2">
                 <div>
-                    <img src="./images/video-image.svg" alt="#"/>
+                    <img src="./images/video-image.svg" alt="video-image"/>
                     <a href="#">play Video</a>
                 </div>
             </div>    
@@ -208,19 +211,19 @@
             <h3 class="text5">Latest Blog & News</h3>
             <div class="latest">
                 <div class="card12">
-                    <img src="./images/post1.png" alt="#"/>
+                    <img src="./images/post1.png" alt="post1"/>
                     <h3>Why you have to digitalize in 2021</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et.</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div class="card13">
-                    <img src="./images/post-2.png" alt="#"/>
+                    <img src="./images/post-2.png" alt="post-2"/>
                     <h3>Our internal process and longerm vision</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et.</p>
                     <a href="#">Learn More</a>
                 </div>       
                 <div class="card14">
-                    <img src="./images/post-3.png" alt="#"/>
+                    <img src="./images/post-3.png" alt="post-3"/>
                     <h3>Helping the next generation of leaders</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet eros blandit, hendrerit elit et.</p>
                     <a href="#">Learn More</a>
